--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,43 @@ img {
   display: block;
   max-width: 100%;
 }
+.button-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+}
+.color-switch {
+  padding: 20px 40px;
+  font-family: monospace;
+  font-size: 20px;
+  font-weight: 700;
+  color: #fafafa;
+  background-color: red;
+  box-shadow: 5px 5px 12px black;
+
+  border-radius: 10px;
+}
+.color-switch:first-of-type {
+  background-color: darkgreen;
+}
+.timer {
+  display: flex;
+  position: relative;
+  top: 30rem;
+  justify-content: center;
+  gap: 40px;
+}
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 15px;
+  color: gray;
+}
+.value {
+  font-size: 60px;
+  font-family: monospace;
+  font-weight: 600;
+  color: black;
+}
